--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [tool.poetry]
-name = "anjani_bot"
+name = "telegram_bot"
 version = "1.3.3"
 description = "Telegram group management bot"
 license = "GPL-3.0-or-later"
-authors = ["UserbotIndo Team"]
+authors = ["levina-lab"]
 readme = "README.md"
-homepage = "https://github.com/userbotindo/anjani#readme"
-repository = "https://github.com/userbotindo/anjani"
+homepage = "https://github.com/levina-lab/telegramgroupbot#readme"
+repository = "https://github.com/levina-lab/telegramgroupbot"
 documentation = "https://github.com/userbotindo/Anjani/wiki"
 keywords = ["chatbot", "bot", "python", "telegram-bot", "pyrogram"]
 classifiers = [
@@ -23,7 +23,7 @@ classifiers = [
 ]
 
 [tool.poetry.scripts]
-anjani = "anjani_bot:start"
+telegramgroupbot = "telegram_bot:start"
 
 [tool.poetry.dependencies]
 python = "^3.8"
