--- a/app.json
+++ b/app.json
@@ -8,6 +8,7 @@
     "python"
   ],
   "repository": "https://github.com/levina-lab/TelegramGroupBot",
+  "stack": "container",
   "env": {
     "API_ID": {
       "description": "your app id from my.telegra,.org",
