--- a/app.json
+++ b/app.json
@@ -4,6 +4,7 @@
   "keywords": ["telegram", "group", "management", "python"
   ],
   "repository": "https://github.com/levina-lab/TelegramGroupBot",
+  "logo": "https://telegra.ph/file/d0cda6fee4b1e0c580116.png",
   "stack": "container",
   "env": {
     "API_ID": {
